--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
 
     <EditText
         android:id="@+id/email_or_phone_input"
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:hint="Введите email" />
@@ -52,6 +52,16 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textSize="25sp"
+        android:layout_marginTop="10dp"
         android:text="Войти" />
+
+    <TextView
+        android:id="@+id/to_registration_page_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:text="У вас нет аккаунта? Регистрация"
+        android:textSize="15sp" />
 
 </LinearLayout>
