--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -76,6 +76,17 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textSize="12sp"
+        android:layout_marginTop="10dp"
         android:text="Зарегистрироваться" />
+
+    <TextView
+        android:id="@+id/to_login_page_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:text="У вас уже есть аккаунт? Войти"
+        android:textSize="15sp" />
+
 
 </LinearLayout>
